--- a/cart.html
+++ b/cart.html
@@ -71,290 +71,7 @@
 
                 <div class="cart-container">
 
-                </div>
-
-                    <!-- Cart Item 1 -->
-                    <div class="mt-3">
-                        <div class="pt-4 wish-list">
-
-                            <!-- <h5 class="mb-4">Cart (<span>2</span> items)</h5> -->
-                            <div class="row mb-4 hide-item-1">
-                                <div class="col-md-5 col-lg-3 col-xl-3">
-                                    <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
-                                        <img class="img-fluid w-100" src="images/Coding_for_Beginners.jpg" alt="Coding for beginners">
-
-                                    </div>
-                                </div>
-                                <div class="col-md-7 col-lg-9 col-xl-9">
-                                    <div>
-                                        <div class="d-flex justify-content-between">
-                                            <div>
-                                                <h5 id="Book1Title"></h5>
-                                                <p class="mb-3 text-muted text-uppercase small">Front End - Book</p>
-                                                <p class="mb-2 text-muted text-uppercase small">Order By</p>
-                                            </div>
-                                            <div>
-                                                <div class="def-number-input number-input md-0 w-100">
-                                                    <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus decrease"></button>
-                                                    <input class="quantity" min="0" name="quantity" value="1" type="number">
-                                                    <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus increase"></button>
-                                                </div>
-                                                <small id="passwordHelpBlock" class="form-text text-muted text-center">
-                                (Note, 1 Book)
-                              </small>
-                                            </div>
-                                        </div>
-                                        <div class="d-flex justify-content-between align-items-center">
-                                            <div>
-                                                <a href="#!" type="button" id="rm-btn-1" class="btn btn-danger card-link-secondary small text-uppercase mr-3"><i
-                                  class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                        <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
-                                  class="fas fa-heart mr-1"></i> Move to wish list </a>
-            </div>
-            <p class="mb-0"><span><strong id="summary">$25.00</strong></span></p class="mb-0">
-        </div>
-        </div>
-        </div>
-        </div>
-        <!--------------->
-
-        <!-- Cart Item 2 -->
-        <hr class="mb-4 hide-hr-2">
-        <div class="mb-3">
-            <div class="pt-4 wish-list">
-
-                <div class="row mb-4 hide-item-2">
-                    <div class="col-md-5 col-lg-3 col-xl-3">
-                        <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
-                            <img class="img-fluid w-100" src="images/Javascript_for_Beginners.jpg" alt="Javascript_for_Beginners">
-
-                        </div>
-                    </div>
-                    <div class="col-md-7 col-lg-9 col-xl-9">
-                        <div>
-                            <div class="d-flex justify-content-between">
-                                <div>
-                                    <h5>Javascript for Beginners</h5>
-                                    <p class="mb-3 text-muted text-uppercase small">Front end - Book</p>
-                                    <p class="mb-2 text-muted text-uppercase small">Order By</p>
-                                </div>
-                                <div>
-                                    <div class="def-number-input number-input safari_only mb-0 w-100">
-                                        <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus decrease"></button>
-                                        <input class="quantity" min="0" name="quantity" value="1" type="number">
-                                        <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus increase"></button>
-                                    </div>
-                                    <small id="passwordHelpBlock" class="form-text text-muted text-center">
-                                        (Note, 1 Book)
-                                      </small>
-                                </div>
-                            </div>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div>
-                                    <a href="#!" type="button" id="rm-btn-2" class="btn btn-danger card-link-secondary small text-uppercase mr-3"><i
-                                          class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                                    <a href="#!" type="button" class="add-btn-1 btn btn-secondary card-link-secondary small text-uppercase"><i
-                                          class="fas fa-heart mr-1"></i> Move to wish list </a>
-                                </div>
-                                <p class="mb-0"><span><strong id="summary">$30.00</strong></span></p class="mb-0">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-----End of Cart Item 2---------->
-
-        <!-- Cart Item 3 -->
-        <hr class="mb-4 hide-hr-3">
-        <div class="mb-3">
-            <div class="pt-4 wish-list">
-
-                <div class="row mb-4 hide-item-3">
-                    <div class="col-md-5 col-lg-3 col-xl-3">
-                        <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
-                            <img class="img-fluid w-100" src="images/SQL_Programming_For_Beginners.jpg" alt="SQL_Programming_For_Beginners">
-
-                        </div>
-                    </div>
-                    <div class="col-md-7 col-lg-9 col-xl-9">
-                        <div>
-                            <div class="d-flex justify-content-between">
-                                <div>
-                                    <h5>SQL Programming For Beginners</h5>
-                                    <p class="mb-3 text-muted text-uppercase small">Databases - Book</p>
-                                    <p class="mb-2 text-muted text-uppercase small">Order By</p>
-                                </div>
-                                <div>
-                                    <div class="def-number-input number-input safari_only mb-0 w-100">
-                                        <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus decrease"></button>
-                                        <input class="quantity" min="0" name="quantity" value="1" type="number">
-                                        <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus increase"></button>
-                                    </div>
-                                    <small id="passwordHelpBlock" class="form-text text-muted text-center">
-                                        (Note, 1 Book)
-                                      </small>
-                                </div>
-                            </div>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div>
-                                    <a href="#!" type="button" id="rm-btn-3" class="btn btn-danger card-link-secondary small text-uppercase mr-3"><i
-                                          class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                                    <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
-                                          class="fas fa-heart mr-1"></i> Move to wish list </a>
-                                </div>
-                                <p class="mb-0"><span><strong id="summary">$25.00</strong></span></p class="mb-0">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--------------->
-
-        <!-- Cart Item 4 -->
-        <hr class="mb-4 hide-hr-4">
-        <div class="mb-3">
-            <div class="pt-4 wish-list">
-
-
-
-                <div class="row mb-4 hide-item-4">
-                    <div class="col-md-5 col-lg-3 col-xl-3">
-                        <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
-                            <img class="img-fluid w-100" src="images/Database_Management_System.jpg" alt="Database_Management_System">
-
-                        </div>
-                    </div>
-                    <div class="col-md-7 col-lg-9 col-xl-9">
-                        <div>
-                            <div class="d-flex justify-content-between">
-                                <div>
-                                    <h5>Database Management System</h5>
-                                    <p class="mb-3 text-muted text-uppercase small">Databases - Book</p>
-                                    <p class="mb-2 text-muted text-uppercase small">Order By</p>
-                                </div>
-                                <div>
-                                    <div class="def-number-input number-input safari_only mb-0 w-100">
-                                        <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus decrease"></button>
-                                        <input class="quantity" min="0" name="quantity" value="1" type="number">
-                                        <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus increase"></button>
-                                    </div>
-                                    <small id="passwordHelpBlock" class="form-text text-muted text-center">
-                                        (Note, 1 Book)
-                                      </small>
-                                </div>
-                            </div>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div>
-                                    <a href="#!" type="button" id="rm-btn-4" class="btn btn-danger card-link-secondary small text-uppercase mr-3"><i
-                                          class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                                    <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
-                                          class="fas fa-heart mr-1"></i> Move to wish list </a>
-                                </div>
-                                <p class="mb-0"><span><strong id="summary">$25.00</strong></span></p class="mb-0">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--------------->
-
-        <!-- Cart Item 5 -->
-        <hr class="mb-4 hide-hr-5">
-        <div class="mb-3">
-            <div class="pt-4 wish-list">
-
-
-
-                <div class="row mb-4 hide-item-5">
-                    <div class="col-md-5 col-lg-3 col-xl-3">
-                        <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
-                            <img class="img-fluid w-100" src="images/Sql_Database_Programming.jpg" alt="Sql_Database_Programming">
-
-                        </div>
-                    </div>
-                    <div class="col-md-7 col-lg-9 col-xl-9">
-                        <div>
-                            <div class="d-flex justify-content-between">
-                                <div>
-                                    <h5>SQL Database Programming</h5>
-                                    <p class="mb-3 text-muted text-uppercase small">Databases - Book</p>
-                                    <p class="mb-2 text-muted text-uppercase small">Order By</p>
-                                </div>
-                                <div>
-                                    <div class="def-number-input number-input safari_only mb-0 w-100">
-                                        <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus decrease"></button>
-                                        <input class="quantity" min="0" name="quantity" value="1" type="number">
-                                        <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus increase"></button>
-                                    </div>
-                                    <small id="passwordHelpBlock" class="form-text text-muted text-center">
-                                        (Note, 1 Book)
-                                      </small>
-                                </div>
-                            </div>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div>
-                                    <a href="#!" type="button" id="rm-btn-5" class="btn btn-danger card-link-secondary small text-uppercase mr-3"><i
-                                          class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                                    <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
-                                          class="fas fa-heart mr-1"></i> Move to wish list </a>
-                                </div>
-                                <p class="mb-0"><span><strong id="summary">$30.00</strong></span></p class="mb-0">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--------------->
-
-        <!-- Cart Item 6 -->
-        <hr class="mb-4 hide-hr-6">
-        <div class="mb-3">
-            <div class="pt-4 wish-list">
-
-                <div class="row mb-4 hide-item-6">
-                    <div class="col-md-5 col-lg-3 col-xl-3">
-                        <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
-                            <img class="img-fluid w-100" src="images/Essentials_of_Web_Database_Development.jpg" alt="Essentials_of_Web_Database_Development">
-
-                        </div>
-                    </div>
-                    <div class="col-md-7 col-lg-9 col-xl-9">
-                        <div>
-                            <div class="d-flex justify-content-between">
-                                <div>
-                                    <h5>Essential of Web Database Development</h5>
-                                    <p class="mb-3 text-muted text-uppercase small">Databases - Book</p>
-                                    <p class="mb-2 text-muted text-uppercase small">Order By</p>
-                                </div>
-                                <div>
-                                    <div class="def-number-input number-input safari_only mb-0 w-100">
-                                        <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus decrease"></button>
-                                        <input class="quantity" min="0" name="quantity" value="1" type="number">
-                                        <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus increase"></button>
-                                    </div>
-                                    <small id="passwordHelpBlock" class="form-text text-muted text-center">
-                                        (Note, 1 Book)
-                                      </small>
-                                </div>
-                            </div>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div>
-                                    <a href="#!" type="button" id="rm-btn-6" class="btn btn-danger card-link-secondary small text-uppercase mr-3"><i
-                                          class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                                    <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
-                                          class="fas fa-heart mr-1"></i> Move to wish list </a>
-                                </div>
-                                <p class="mb-0"><span><strong id="summary">$25.00</strong></span></p class="mb-0">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                </div>          
         <!--------------->
         <p class="text-primary mb-0"><i class="fas fa-info-circle mr-1"></i> Do not delay the purchase, adding items to your cart does not mean booking them.</p>
 
@@ -365,19 +82,6 @@
         <div class="mb-3 shipDateItem">
             <div class="pt-4">
                 <h5 class="mb-4">Expected shipping delivery</h5>
-                <!-- Temporary Code to test -->
-                <input type="text" id="cart1" size="12" value="">
-                <br>
-                <input type="text" id="cart2" size="12" value="">
-                <br>
-                <input type="text" id="cart3" size="12" value="">
-                <br>
-                <input type="text" id="cart4" size="12" value="">
-                <br>
-                <input type="text" id="cart5" size="12" value="">
-                <br>
-                <input type="text" id="cart6" size="12" value="">
-                <p class="mb-0"> Thu., 12.03. - Mon., 16.03.</p>
             </div>
         </div>
         <!-- Card -->
@@ -424,7 +128,7 @@
                             <p class="mb-0">(including VAT)</p>
                           </strong>
                             </div>
-                            <span><strong>$58.98</strong></span>
+                            <span id="book-Total"><strong>$0.00</strong></span>
                         </li>
                     </ul>
 
